# aoc2024

./: Cargo.toml  README.md
src/: day1.rs  day1.scm  main.rs
