[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
log = "0.4"
env_logger = "0.11"
clap = {version = "4.4", features = ["derive"]}
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
